--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,6 @@
   display: grid;
   grid-gap: 1rem;
 }
-
 header {
   border-bottom: 2px solid #03a3df;
   grid-area: 1 / 1 / 2 / 6;
@@ -51,7 +50,7 @@ footer {
   background-image: url("../images/footerImage.jpg");
   display: flex;
   justify-content: space-around;
-  height: 15rem;
+  height: 18rem;
   align-items: center;
 }
 .footer-image {
@@ -87,4 +86,17 @@ address i {
 .intro h1 {
   padding: 2rem;
   text-align: center;
+}
+.services-sidebar {
+  grid-area: 3 / 1 / 5 / 2;
+}
+.location {
+  grid-area: 3 / 2/ 4 / 4;
+  justify-self: center;
+  align-self: center;
+}
+.map {
+  grid-area: 3 / 4 / 4 / 6;
+ justify-self: stretch;
+  align-self: center;
 }
