updated styling for staff page

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,19 +3,38 @@
   margin: 0;
   padding: 0;
 }
-
+body {
+  color: #444444;
+  font-family: arial, sans-serif;
+}
+p {
+  font-size: 1.0625rem;
+}
+h1 {
+  font-size: 2.5rem;
+}
+h2 {
+  font-size: 1.5rem;
+}
+h3 {
+  font-size: 1.0625rem;
+}
 .wrapper {
   display: grid;
   grid-gap: 1rem;
 }
 header {
+  padding: 4rem 1rem 0rem 1rem ;
   border-bottom: 2px solid #03a3df;
   grid-area: 1 / 1 / 2 / 6;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
+  align-items: flex-end;
 }
-
+.logo-banner {
+  padding: 4rem;
+}
 .main-nav {
   grid-area: 2 / 1 / 3 / 6;
   display: flex;
@@ -33,20 +52,46 @@ header {
   text-decoration: none;
   font-size: 1.2rem;
   transition: background-color 1s ease-in, color ease-out 1s;
-  }
+}
 
-  .main-nav > a:hover {
-    background-color: #ffffff;
-    color: #03a3df;
-  }
-
+.main-nav > a:hover {
+  background-color: #ffffff;
+  color: #03a3df;
+  border: 1px solid #03a3df;
+  border-radius: 20px;
+}
 .intro {
   grid-area: 3/ 1 / 4 / 6;
-  place-self: auto;
-  padding: 2rem;
+  padding: .2rem 2rem .5rem 2rem;
+  margin: 3rem 5rem;
+  color: #444444;
+  font-family: arial, sans-serif
+}
+.intro h1 {
+  text-align: center;
+  font-family: arial, sans-serif;
+  font-weight: bold;
+  font-size: 2.5rem;
+  padding: .5rem;
+  margin: .5rem 2rem 5rem 2rem;
+}
+.intro p {
+  line-height: 1.75rem;
+  padding: 1rem;
+  text-align: center;
+  border-left: 2px solid #03a3df;
+  border-right: 2px solid #03a3df;
+}
+.intro-video {
+  grid-area: 4 / 1 / 5 / 6;
+  padding: .2rem 2rem .5rem 2rem;
+  margin: 3rem 5rem;
+  color: #444444;
+  font-family: arial, sans-serif;
+  text-align: center;
 }
 footer {
-  grid-area: 4 / 1 / 5 / 6;
+  grid-area: 5 / 1 / 6 / 6;
   background-image: url("../images/footerImage.jpg");
   display: flex;
   justify-content: space-around;
@@ -58,10 +103,18 @@ footer {
   order: 2;
 }
 .contact-info {
-  font-size: 1rem;
+  font-size: 1.0625rem;
   color: #ffffff;
   font-family: Tahoma, arial, sans-serif;
   line-height: 1.5rem;
+  word-spacing: 0.2rem;
+}
+.contact-info h3 {
+  padding: 1rem 0rem;
+}
+a {
+  color: inherit;
+  text-decoration: none;
 }
 .social {
   left: 100;
@@ -80,23 +133,205 @@ address i {
   border-radius: 20px;
   margin: 0.25rem;
 }
-.logo-banner {
-  padding: 4rem;
+.services {
+  grid-area: 3 / 2 / 4 / 5;
+  padding: 2rem 2rem 0rem 2rem;
+  justify-self: center;
+  align-self: center;
+  color: #444444;
 }
-.intro h1 {
-  padding: 2rem;
+.services h1 {
+  padding: 0rem 0rem 0rem 4rem;
   text-align: center;
 }
 .services-sidebar {
-  grid-area: 3 / 1 / 5 / 2;
+  grid-area: 3 / 1 / 4 / 2;
+  padding: 4rem 2rem 4rem 2rem;
+}
+.services-sidebar > h3 {
+  padding: 2rem 2rem 0rem 2rem;
+  border-bottom: 2px solid #03a3df;
+  width: 110%;
+}
+.services-sidebar ul {
+  list-style-type: none;
+  margin-top: 2rem;
+  padding: 2rem;
+  background-color: #03a3df;
+  color: #ffffff;
+  transition: background-color 1s ease, color 1s ease;
+  border: 1px solid #03a3df;
+  border-radius: 45px;
+  text-align: center;
+  transition: background-color 1s ease, color 1s ease, border 1s ease;
+}
+.services-sidebar li a {
+  display: block;
+  color: #ffffff;
+  background-color: #03a3df;
+  padding: 0.5rem 0.5rem;
+  text-decoration: none;
+  transition: color 1s ease;
+}
+.services-sidebar li a.active {
+  background-color: #ffffff;
+  color: #03a3df;
+}
+.services-sidebar li a:hover:not(.active) {
+  color: #03a3df;
+  background-color: #ffffff;
+}
+.services-sidebar ul:hover {
+  background-color: #ffffff;
+  color: #03a3df;
+  border: 0px;
+}
+#classes {
+  padding: 4rem;
+}
+#classes > h4 {
+  padding-top: 3rem;
+  padding-bottom: 0rem;
+  border-top: 2px solid #03a3df;
+  border-radius: 15px;
+}
+#classes > p {
+  padding: 0.5rem;
+  line-height: 1.5rem;
+}
+#lessons {
+  padding: 4rem;
+}
+#lessons > h4 {
+  padding-top: 3rem;
+  padding-bottom: 0rem;
+  border-top: 2px solid #03a3df;
+  border-radius: 15px;
+}
+#lessons > p {
+  padding: 0.5rem;
+  line-height: 1.5rem;
+}
+#group-lessons {
+  padding: 4rem;
+}
+#group-lessons > h4 {
+  padding-top: 3rem;
+  padding-bottom: 0rem;
+  border-top: 2px solid #03a3df;
+  border-radius: 15px;
+}
+#group-lessons > p {
+  padding: 0.5rem;
+  line-height: 1.5rem;
+}
+#tournaments {
+  padding: 4rem;
+}
+#tournaments > h4 {
+  padding-top: 3rem;
+  padding-bottom: 0rem;
+  border-top: 2px solid #03a3df;
+  border-radius: 15px;
+}
+.profiles {
+  grid-area: 3 / 2 / 4 / 5;
+  padding: 2rem 2rem 0rem 2rem;
+  justify-self: center;
+  align-self: center;
+  color: #444444;
+}
+.profiles h1 {
+  text-align: center;
+}
+.profiles p {
+  text-align: left;
+}
+.staff-sidebar {
+  grid-area: 3 / 1 / 4 / 2;
+  padding: 4rem 2rem 4rem 2rem;
+}
+.staff-sidebar > h3 {
+  padding: 2rem 2rem 0rem 2rem;
+  border-bottom: 2px solid #03a3df;
+  width: 110%;
+}
+.staff-sidebar ul {
+  list-style-type: none;
+  margin-top: 2rem;
+  padding: 2rem;
+  background-color: #03a3df;
+  color: #ffffff;
+  transition: background-color 1s ease, color 1s ease;
+  border: 1px solid #03a3df;
+  border-radius: 45px;
+  transition: background-color 1s ease, color 1s ease, border 1s ease;
+  text-align: center;
+}
+.staff-sidebar li a {
+  display: block;
+  color: #ffffff;
+  background-color: #03a3df;
+  padding: 0.5rem 0.5rem;
+  text-decoration: none;
+  transition: color 1s ease;
+}
+.staff-sidebar li a.active {
+  background-color: #ffffff;
+  color: #03a3df;
+}
+.staff-sidebar li a:hover:not(.active) {
+  color: #03a3df;
+  background-color: #ffffff;
+}
+.staff-sidebar ul:hover {
+  background-color: #ffffff;
+  color: #03a3df;
+  border: 0px;
+}
+.profiles {
+  grid-area: 3 / 2 / 4 / 5;
+  padding: 2rem 2rem 0rem 2rem;
+  justify-self: center;
+  align-self: center;
+  color: #444444;
+}
+.profiles h1 {
+  padding: 0rem 0rem 0rem 4rem;
+}
+.profiles section {
+  text-align: center;
+  padding: 10rem;
+}
+.profiles section > h3 {
+  padding-top: rem;
+  padding-bottom: 0rem;
+  border-top: 2px solid #03a3df;
+  border-radius: 15px;
+}
+.profiles section > p {
+  padding: 1rem;
+  line-height: 1.5rem;
+}
+.staff-intro {
+  padding-top: 4rem;
 }
 .location {
-  grid-area: 3 / 2/ 4 / 4;
+  grid-area: 3 / 1/ 4 / 4;
   justify-self: center;
   align-self: center;
 }
+.location a {
+  line-height: 1.75rem;
+}
 .map {
   grid-area: 3 / 4 / 4 / 6;
- justify-self: stretch;
+  justify-self: stretch;
   align-self: center;
+}
+.map, .location {
+  padding: 6rem 0rem 6rem 0rem;
+}
+.map h2, .location h2 {
+  padding: 0rem 0rem 2rem 0rem;
 }
